Added year of study

--- a/Registration.html
+++ b/Registration.html
@@ -18,6 +18,9 @@
             
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
+
+            <label for="Yearofstudy">Year of study</label>
+            <input type="year" id="yearofstudy" name="yearofstudy" required>
             
             <button type="submit">Register</button>
         </form>
